--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,15 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        <div class="container-fluid">
+            <div class="row flex-nowrap">
+                {% block navbar %}
+                    {% include 'navbar.html.twig' %}
+                {% endblock %}
+                <div class="col py-3">
+                    {% block body %}{% endblock %}
+                </div>
+            </div>
+        </div>
     </body>
 </html>
