fix: route name in template

--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -10,7 +10,7 @@
             <div class="form-text">
                 Нет аккаунта?
                 <div class="form-text">
-                    <a href="{{ path('app_register') }}">Зарегистрироваться</a>
+                    <a href="{{ path('app-register') }}">Зарегистрироваться</a>
                 </div>
             </div>
         </div>
