--- a/templates/registration.html.twig
+++ b/templates/registration.html.twig
@@ -1,22 +1,114 @@
-{% block title %}Register{% endblock %}
+{# easy admin bundle do not have template for registration #}
+{# it is easier to extends from login page then create special form for registration #}
+{% extends '@EasyAdmin/page/login_minimal.html.twig' %}
+{% trans_default_domain (translation_domain is defined ? translation_domain ?? 'messages') %}
 
-{% block body %}
-    {% for flash_error in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
-    {% endfor %}
+{% block body_class 'page-login' %}
+{% block page_title %}Регистрация{% endblock %}
 
-    <h1>Register</h1>
+{% block head_favicon %}
+    {{ parent() }}
+{% endblock %}
 
-    {{ form_errors(registrationForm) }}
+{# TODO change error view #}
+{% block wrapper_wrapper %}
+    <div class="login-wrapper">
+        <section class="content">
+            {% block login_form_wrapper %}
+                {{ form_start(form) }}
+                <div class="form-group">
+                    <label class="form-control-label required" for="username">Логин</label>
+                    <div class="form-widget">
+                        {{ form_errors(form.username) }}
+                        <input
+                                type="text"
+                                id="username"
+                                name="{{ field_name(form.username) }}"
+                                class="form-control"
+                                value="{{ field_value(form.username) }}"
+                        >
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label required" for="email">Email</label>
+                    <div class="form-widget">
+                        {{ form_errors(form.email) }}
+                        <input
+                                type="email"
+                                id="email"
+                                name="{{ field_name(form.email) }}"
+                                class="form-control"
+                                value="{{ field_value(form.email) }}"
+                        >
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label required" for="lastName">Фамилия</label>
+                    <div class="form-widget">
+                        {{ form_errors(form.lastName) }}
+                        <input
+                                type="text"
+                                id="lastName"
+                                name="{{ field_name(form.lastName) }}"
+                                class="form-control"
+                                value="{{ field_value(form.lastName) }}"
+                        >
+                    </div>
+                    <label class="form-control-label required" for="firstName">Имя</label>
+                    <div class="form-widget">
+                        {{ form_errors(form.firstName) }}
+                        <input
+                                type="text"
+                                id="firstName"
+                                name="{{ field_name(form.firstName) }}"
+                                class="form-control"
+                                value="{{ field_value(form.firstName) }}"
+                        >
+                    </div>
+                    <label class="form-control-label" for="middleName">Отчество</label>
+                    <div class="form-widget">
+                        {{ form_errors(form.middleName) }}
+                        <input
+                                type="text"
+                                id="middleName"
+                                name="{{ field_name(form.middleName) }}"
+                                class="form-control"
+                                value="{{ field_value(form.middleName) }}"
+                        >
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="form-control-label required" for="plainPasswordFirst">Пароль</label>
+                    <div class="form-widget">
+                        {{ form_errors(form.plainPassword.first) }}
+                        <input
+                                type="password"
+                                id="plainPasswordFirst"
+                                name="{{ field_name(form.plainPassword.first) }}"
+                                class="form-control"
+                                value="{{ field_value(form.plainPassword.first) }}"
+                        >
+                    </div>
+                    <label class="form-control-label required" for="plainPasswordSecond">Повторите пароль</label>
+                    <div class="form-widget">
+                        {{ form_errors(form.plainPassword.second) }}
+                        <input
+                                type="password"
+                                id="plainPasswordSecond"
+                                name="{{ field_name(form.plainPassword.second) }}"
+                                class="form-control"
+                                value="{{ field_value(form.plainPassword.second) }}"
+                        >
+                    </div>
+                </div>
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.username) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+                <button type="submit" class="btn btn-primary btn-lg btn-block">Зарегистрироваться</button>
+                {{ form_end(form) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+                <div class="form-text">
+                    <a href="{{ path('app-login') }}">У меня уже есть аккаунт</a>
+                </div>
+            {% endblock login_form_wrapper %}
+        </section>
+    </div>
 {% endblock %}
